Prevent image overflow

--- a/index.scss
+++ b/index.scss
@@ -72,6 +72,7 @@ body {
 	.card-img {
 		width: auto;
 		max-height: 200px;
+		max-width: 250px;
 	}
 }
 .entry.card.specific {
